@@ -1,3 +1,7 @@
+2012-06-30  Andreas K. Foerster  <info@akfoerster.de>
+
+	* avatar-sdl.c (avt_pager_line): support separators
+
 2012-06-29  Andreas K. Foerster  <info@akfoerster.de>
 
 	* langposix.c, mingw/langwindows.c: new files
